Add BatchSpliterator presizing tests (#782)